# AoC-2022

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
.github/workflows/: build-aoc.yml
day01/: CmakeLists.txt  main.cpp
day02/: CMakeLists.txt  main-0.cpp  main-1.cpp  main-2.cpp
day03/: CMakeLists.txt  main-0.cpp  main-1.cpp  main-2.cpp
day04/: CMakeLists.txt  main-1.cpp  main-2.cpp
day05/: CMakeLists.txt  Stacks.cpp  Stacks.hpp  main-1.cpp  main-2.cpp
day06/: CMakeLists.txt  main-1.cpp  main-2.cpp
day07/: CMakeLists.txt  main-1.cpp  main-2.cpp
day08/: CMakeLists.txt  main-1.cpp  main-2.cpp
day09/: CMakeLists.txt  main-1.cpp  main-2.cpp
day10/: CMakeLists.txt  main-1.cpp  main-2.cpp
day11/: CMakeLists.txt  main-1.cpp  main-2.cpp
